2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Make "make distcheck" finally work again:

	* Makefile.am: set DISTCHECK_CONFIGURE_FLAGS.
	* configure.ac (AM_INIT_AUTOMAKE): move from gzip to bzip2 distfile.
	* scripts/Makefile.am: add avr-man.in to EXTRA_DIST, fix location
	of stamp-h1 dependecny.

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/interrupt.h: Fix description of sei() [bug #13557
	overview: small typo in avr-libc-user-manual-1.2.3], emit
	faked function prototypes for sei() and sli() within doxygen.

2005-09-07 Anatoly Sokolov <aesok@pautinka.net>

	* configure.ac: add tests for the ATmega640/1280/1281 support
	* devtools/gen-avr-lib-tree.sh: add support for ATmega640/1280/1281.
	* include/avr/io.h: (Ditto.) 
	* include/avr/wdt.h: (Ditto.)
	* include/avr/iom640.h: new file.
	* include/avr/iom1280.h: new file.
	* include/avr/iom1281.h: new file.
	* include/avr/iomxx0_1.h: new file.
	* include/avr/Makefile.am: include new files.
	* crt1/gcrt1.S: add more interrupt vector names.
	* doc/api/main_page.dox: Document support for ATmega640/1280/1281.
	* doc/api/using-tools.dox: (Ditto.)

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/delay.h: improve documentation, make sure the
	functions will always be inlined.
	Fix for bugs:
	#12495: about Busy-wait delay loops(document)
	#14224: _delay_ms() not inlining if called more than once in a unit
	#14433: Improve documentation of <avr/delay.h>

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iomxx4.h: use avr-libc common vector names.

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix for bug #12333: Standard requires libstdc to define vprintf
	and vscanf
	* include/stdio.h: add prototypes for vscanf() and vprintf().
	* libc/stdio/vscanf.c: new file.
	* libc/stdio/vprintf.c: new file.
	* libc/stdio/Files.am: add vscanf.c and vprintf.c.

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Markus F.X.J. Oberhumer: